--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 }
